# deepE

./: README.md  setup.py
agent/: app.py  offcputime.py  setup.py  trace_event.py
agent/bpf/: __init__.py  offcputime.py  runqslower.py
agent/conf/: config.py
agent/event/: trace_event.py
agent/examples/: __init__.py
agent/protos/perfetto/trace/: trace_packet.proto
agent/protos/perfetto/trace/track_event/: track_event.proto
collector/: CMakeLists.txt
collector/include/cargo_monitor/: hz.h  topic_cfg.h  topics_graph_cfg.h
collector/include/monitor/: connection_monitor.h  monitor_config.h  monitor_factory.h  monitor_item.h  net_monitor.h  node_latency_monitor.h  softirq_monitor.h  topic_monitor.h  udp_monitor.h
collector/include/utils/: ethtool_priv.h  netlink_helper.h  proc_file.h  proc_stat.h  thread.h
collector/launch/: cargo_monitor.launch
collector/protos/: system_info.proto
collector/src/: perfetto_test.cpp  system_monitor_node.h
collector/src/cargo_monitor/: cargo_monitor.cpp  hz_test.cpp  topics_tracer.cpp
collector/src/monitor/: cpu_temp_monitor.cpp  mem_monitor.cpp  net_monitor.cpp  node_latency_monitor.cpp  node_monitor.cpp  status_monitor.cpp  thread_monitor.cpp  topic_monitor.cpp
collector/src/test/: CMakeLists.txt  cmw_sub_test_node.h  test_get_all_topics.cpp
collector/src/utils/: libsensors_chip.cpp  proc_stat.cpp  thread.cpp
deepE/: README.md  docker_run.sh  install.sh
deepE/agent/: app.py  config.py  offcputime.py  runqslower.py
deepE/agent/bpf/: __init__.py  offcputime.py  runqslower.py
deepE/agent/conf/: config.py
deepE/agent/event/: trace_event.py
deepE/agent/examples/: __init__.py
deepE/collector/include/cargo_monitor/: cargo_monitor.h  msg_lat_cfg.h  msg_trace.h  topics_tracer.h
deepE/collector/include/monitor/: cpu_monitor.h  cpu_temp_monitor.h  fs_monitor.h  gpu_monitor.h  jetson_gpu_monitor.h  mem_monitor.h  msglat_monitor.h  node_monitor.h  status_monitor.h  thread_monitor.h
deepE/collector/include/utils/: jetsonpower.h  libsensors_chip.h  netlink_utils.h  process.h  ros_utils.h  utils.h
deepE/collector/src/: CMakeLists.txt  cargo_monitor.cpp  system_monitor_node.cpp
deepE/collector/src/cargo_monitor/: cargo_monitor_cfg.cpp  hz.cpp  msg_lat_cfg.cpp  topic_cfg.cpp  topics_graph_cfg.cpp
deepE/collector/src/monitor/: connection_monitor.cpp  cpu_monitor.cpp  fs_monitor.cpp  gpu_monitor.cpp  jetson_gpu_monitor.cpp  monitor_config.cpp  msglat_monitor.cpp  softirq_monitor.cpp  udp_monitor.cpp
deepE/collector/src/test/: cmw_sub_test_main.cpp  cmw_sub_test_node.cpp
deepE/collector/src/utils/: jetsonpower.cpp  netlink_helper.cpp  netlink_utils.cpp  process.cpp  ros_utils.cpp  utils.cpp
deepE/docker/: Dockerfile.aarch64  Dockerfile.x86  Makefile  requirements.txt
deepE/docker/make/: make_bcc.sh
deepE/tests/: io_test.c  makefile
deepE/ui/linux-amd64/: tracebox  traced  traced_probes
docker/: Dockerfile.x86
ui/linux-amd64/: perfetto
